<resources>
    <string name="app_name">ChatApp</string>
    <string name="enter_name">Enter Name</string>
    <string name="enter_email">Enter Email</string>
    <string name="enter_password">Enter Password</string>
    <string name="confirm_password">Confirm Password</string>
    <string name="btn_sign_up">Sign Up</string>
    <string name="btn_login">Login</string>
    <string name="label_sign_up">Sign Up</string>
    <string name="label_sign_in">Sign In</string>
    <string name="label_message">Message</string>
    <string name="label_profile">Profile</string>
    <string name="btn_save">Save</string>
    <string name="type_message">Type Message</string>
    <string name="enter_userid">Enter UserId</string>
    <string name="next">Next</string>
    <string name="add">Add</string>
</resources>