<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    android:orientation="vertical"
    tools:context=".SignUpActivity">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/label_sign_up"
        android:textSize="20sp"
        android:textStyle="bold"
        android:fontFamily="@font/gilroy_bold"
        android:layout_marginStart="15dp"
        android:layout_marginBottom="10dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <EditText
        android:id="@+id/etName"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/ColorTextBackground"
        android:hint="@string/enter_name"
        android:padding="12dp"
        android:textColor="#813fd7" />

    <EditText
        android:id="@+id/etEmail"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/ColorTextBackground"
        android:hint="@string/enter_email"
        android:padding="12dp"
        android:textColor="#813fd7" />

    <EditText
        android:id="@+id/etPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/ColorTextBackground"
        android:hint="@string/enter_password"
        android:padding="12dp"
        android:textColor="#813fd7" />

    <EditText
        android:id="@+id/etConfirmPassword"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:inputType="textPassword"
        android:layout_marginStart="15dp"
        android:layout_marginTop="5dp"
        android:layout_marginEnd="15dp"
        android:fontFamily="@font/gilroy_light"
        android:background="@color/ColorTextBackground"
        android:hint="@string/confirm_password"
        android:padding="12dp"
        android:textColor="#813fd7" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_margin="20dp"
        android:orientation="horizontal">
        <Button
            android:id="@+id/btnSignUp"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_height="wrap_content"
            android:layout_marginEnd="2dp"
            android:background="@color/ColorPrimary"
            android:textColor="@color/ColorAccent"
            android:text="@string/label_sign_up"/>

        <Button
            android:id="@+id/btnLogin"
            android:layout_width="0dp"
            android:layout_weight="1"
            android:layout_marginStart="2dp"
            android:layout_height="wrap_content"
            android:background="@color/ColorPrimary"
            android:textColor="@color/ColorAccent"
            android:text="@string/btn_login"/>

    </LinearLayout>



</LinearLayout>